Fix search button foreground colour in dark mode.

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -199,7 +199,7 @@
     --h2-decoration-bg-color: #6b6b6b;
     --header-fg-color: #2b6da3;
     --hr-bdr-color: #6b6b6b;
-    --i-fas-search-fg-color: #f3f5f9;
+    --i-fas-search-fg-color: #336791;
     --navbar-bg-color: #212121;
     --navbar-fg-color: #f3f5f9;
     --navbar-toggler-img: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(243, 245, 249, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
